--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
+
+		<sonar.projectKey>Shield1739_ProyectoJavaMaven</sonar.projectKey>
+		<sonar.organization>shield1739</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 </project>
